--- a/ShoppingApp/app/src/main/res/layout/fragment_detail.xml
+++ b/ShoppingApp/app/src/main/res/layout/fragment_detail.xml
@@ -47,4 +47,33 @@
         android:layout_alignLeft="@+id/servicio_tienda"
         android:layout_alignStart="@+id/servicio_tienda"
         android:id="@+id/ratingBar" />
+
+    <Button
+        android:text="Web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/web_button"
+        android:layout_alignBaseline="@+id/call_button"
+        android:layout_alignBottom="@+id/call_button"
+        android:layout_alignRight="@+id/ratingBar"
+        android:layout_alignEnd="@+id/ratingBar" />
+
+    <Button
+        android:text="Call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="37dp"
+        android:id="@+id/call_button"
+        android:layout_below="@+id/ratingBar"
+        android:layout_alignLeft="@+id/ratingBar"
+        android:layout_alignStart="@+id/ratingBar" />
+
+    <Button
+        android:text="Editar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
