--- a/ShoppingApp/app/src/main/res/menu/main.xml
+++ b/ShoppingApp/app/src/main/res/menu/main.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:title="@string/menu_backup_now_button_text"
+        android:orderInCategory="102"
+        android:id="@+id/backup_menu_button" />
 </menu>
