Set location info if this Tienda is around on the Location Broadcast receiver

--- a/ShoppingApp/app/src/main/res/layout/fragment_detail.xml
+++ b/ShoppingApp/app/src/main/res/layout/fragment_detail.xml
@@ -121,7 +121,7 @@
         tools:text="Estoy en la tienda" />
 
     <Button
-        android:text="Button"
+        android:text="@string/set_here_as_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
